--- a/package.json
+++ b/package.json
@@ -14,18 +14,19 @@
     "@heroicons/react": "^2.1.4",
     "@sanity/client": "^7.3.0",
     "@sanity/image-url": "^1.0.2",
-    "@sanity/vision": "^3.89.0",
+    "@sanity/vision": "^2.2.6",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
     "feed": "^4.2.2",
     "framer-motion": "^11.2.10",
     "lucide-react": "^0.511.0",
-    "next": "^14.2.29",
-    "next-sanity": "^9.11.1",
+    "next": "^15.3.3",
+    "next-sanity": "^0.8.5",
     "react": "^18",
     "react-dom": "^18",
     "react-use-measure": "^2.1.1",
-    "sanity": "^3.89.0",
+    "recharts": "^2.15.3",
+    "sanity": "^2.36.6",
     "styled-components": "^6.1.18"
   },
   "devDependencies": {
@@ -34,7 +35,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
-    "eslint-config-next": "14.2.11",
+    "eslint-config-next": "^15.3.3",
     "postcss": "^8.4.40",
     "prettier": "^3.3.2",
     "prettier-plugin-organize-imports": "^4.0.0",
