--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "react-dom": "^18",
     "react-use-measure": "^2.1.1",
     "recharts": "^2.15.3",
-    "styled-components": "^6.1.18"
+    "styled-components": "^6.1.18",
+    "swiper": "^11.2.8",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@types/node": "^20",
