--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dayjs": "^1.11.12",
     "feed": "^4.2.2",
     "framer-motion": "^11.2.10",
+    "gsap": "^3.13.0",
     "lucide-react": "^0.511.0",
+    "motion": "^12.17.3",
     "next": "^15.3.3",
     "react": "^18",
     "react-dom": "^18",
