--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "radiant",
+  "name": "VIXII",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -21,6 +21,7 @@
     "next": "^15.3.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "react-use-measure": "^2.1.1",
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
