--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@chakra-ui/react": "^3.21.0",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
     "clsx": "^2.1.1",
