--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/openai": "^1.3.22",
+    "@ai-sdk/react": "^1.2.12",
     "@chakra-ui/react": "^3.21.0",
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.4",
+    "ai": "^4.3.16",
     "clsx": "^2.1.1",
     "dayjs": "^1.11.12",
     "feed": "^4.2.2",
@@ -27,7 +30,8 @@
     "recharts": "^2.15.3",
     "styled-components": "^6.1.18",
     "swiper": "^11.2.8",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "zod": "^3.25.67"
   },
   "devDependencies": {
     "@types/node": "^20",
